# generate-stickers-AveryL7871

./: CHANGELOG.md  LICENSE  README.md  generateStickers.py  pyproject.toml
.github/workflows/: pytest.yaml  ruff.yaml  test_script.yaml
resources/: preamble.tex
src/generate_labels/: __init__.py  generate_labels.py
src/generate_labels/resources/: before_body.tex  preamble.tex
tests/: test_generate_labels.py
