[project]
name = "generate-labels"
version = "3.0.0"
description = "This script reads sample names from a txt file (one name per line) and arranges them on a sheet of A4 paper so that they can be printed on Avery-Zweckform L7871 labels"
readme = "README.md"
authors = [
    { name = "Gleb Ebert", email = "dev@gl-eb.me" }
]
license = {file = "LICENSE"}
requires-python = ">=3.13"
dependencies = [
    "colorama>=0.4.6",
]

[project.scripts]
generate-labels = "generate_labels.generate_labels:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
